[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "upSmtEngine"
version = "1.0.0"
description = "Engine for unified-planning, implementing a SMT solver."
dependencies = [
    "pre-commit",
    "black",
    "unified-planning >= 0.4.2",
    "z3 >= 0.2.0",
    "z3-solver",
]

[tool.setuptools.packages.find]
where = ["src"]