[metadata]
name = upSmtEngine
version = 0.0.2
author = Ben Pathak
author_email = pathak.ban@gmail.com
description = Engine for unified-planning, implementing a SMT solver.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/BPat123/up-smt-engine
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = up_SMT_engine
packages = find:
python_requires = >=3.7
install_requires =
    pre-commit
    black
    unified-planning>=0.4.2
    z3>=0.2.0

[options.packages.find]
where = up_SMT_engine